--- a/catalog-item.html
+++ b/catalog-item.html
@@ -19,7 +19,9 @@
           <li><a href="contacts.html">Контакты</a></li>
         </ul>
         <ul class="user-navigation">
-          <li class="login-link">Вход</li>
+          <li class="login-link">
+            <a class="login-link" href="login.html">Вход</a>
+          </li>
         </ul>
       </nav>
     </header>
@@ -81,23 +83,27 @@
       </p>
     </footer>
     <section class="modal modal-login">
-      <h2>Личный кабинет</h2>
-      <p>Введите свой логин и пароль.</p>
-      <form class="login-form" action="https://echo.htmlacademy.ru" method="post">
-        <p>
-          <input class="login-icon-user" type="text" name="login" placeholder="Логин">
-        </p>
-        <p>
-          <input class="login-icon-password" type="password" name="password" placeholder="Пароль">
-        </p>
-        <p class="login-password-info">
-          <input type="checkbox" name="remember" class="visually-hidden">
+    <h2>Вход в личный кабинет</h2>
+    <p>Введите свой логин и пароль.</p>
+    <form class="login-form" action="https://echo.htmlacademy.ru" method="post">
+    <p>
+      <label class="visually-hidden" for="user-login">Логин</label>
+      <input id="user-login" class="login-icon-user" type="text" name="login" placeholder="логин">
+    </p>
+    <p>
+      <label class="visually-hidden" for="user-password">Пароль</label>
+      <input id="user-password" class="login-icon-password" type="password" name="password" placeholder="Пароль">
+    </p>
+    <p class="login-password-info">
+    <label class="login-checkbox">
+      <input type="checkbox" name="remember" class="visually-hidden">
           Запомните меня
-          <a class="restore" href="#">Я забыл пароль!</a>
-        </p>
-        <button class="button" type="submit">Войти</button>
-      </form>
-      <span class="modal-close">x</span>
-    </section>
+    </label>
+    <a class="restore" href="#">Я забыл пароль!</a>
+    </p>
+    <button class="button" type="submit">Войти</button>
+    </form>
+    <button class="modal-close" type="button">Закрыть</button>
+  </section>
   </body>
 </html>
