--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
   			<li><a href="contacts.html">Контакты</a></li>
   		</ul>
   		<ul class="user-navigation">
-  			<li class="login">Вход</li>
+  			<li class="login">
+  			<a class="login-link" href="login.html">Вход</a>
+  			</li>
   		</ul>
   	</nav>
   </header>
@@ -28,7 +30,7 @@
   		<h2 class="visually-hidden">Преимущества</h2>
   		<ul class="features-list">
   			<li class="feature-item">
-  			<h2>Быстро</h2>
+  				<h2>Быстро</h2>
   			<p>Мы делаем свою работу быстро!Два часа пролетят незаметно и вы-счастливый обладатель стрижки-минутки!</p>
   			</li>
   			<li class="feature-item">
@@ -59,8 +61,8 @@
   		<h2>Фотогалерея</h2>
   		<figure class="gallery-content">
   	    	<a href="#"><img src="img/studio.jpg" width="286" height="164" alt="Интерьер"></a>
-  	    	<span class="button gallery-button gallery-button-back">Назад</span>
-        	<span class="button gallery-button gallery-button-next">Вперед</span>
+  	    	<button class="button gallery-button gallery-button-back">Назад</button>
+        	<button class="button gallery-button gallery-button-next">Вперед</button>
   		</figure>
   	</section>
   	<section>
@@ -83,20 +85,20 @@
   		<p class="appointment-info">Укажите желаемую дату и время и мы свяжемся с вами для подтверждения брони</p>
   		<form class="appointment-form"action="https://echo.htmlacademy.ru" method="post">
   			<p class="appointment-item">
-  				Дата
-  				<input type="text" name="datte" value="" placeholder="08.10.2017">
+  				<label for="appointment-date">Дата</label>
+  				<input id="appointment-date" type="text" name="date" value="" placeholder="08.10.2017">
   			</p>
   			<p class="appointment-item">
-  				Время
-  				<input type="text" name="time" value="" placeholder="10:00">
+  				 <label for="appointment-time">Время</label> 
+  				<input id="appointment-time" type="text" name="time" value="" placeholder="10:00">
   			</p>
             <p class="appointment-item">
-            	Ваше имя
-  				<input type="text" name="name" value="" placeholder="Борода">
+            	 <label for="appointment-name">Ваше имя</label> 
+  				<input id="appointment-name" type="text" name="name" value="" placeholder="Борода">
   			</p>
   			<p class="appointment-item">
-  				Телефон
-  				<input type="tel" name="phone" value="" placeholder="+7 123 456-78-90">
+  				 <label for="appointment-phone">Телефон</label> 
+  				<input id="appointment-phone" type="tel" name="phone" value="" placeholder="+7 123 456-78-90">
   			</p>
   				<button class="button" type="submit">Отправить</button>
   		</form>
@@ -127,19 +129,30 @@
   	<p>Введите свой логин и пароль.</p>
   	<form class="login-form" action="https://echo.htmlacademy.ru" method="post">
   	<p>
-    	<input class="login-icon-user" type="text" name="login" placeholder="логин">
+  		<label class="visually-hidden" for="user-login">Логин</label>
+    	<input id="user-login" class="login-icon-user" type="text" name="login" placeholder="логин">
   	</p>
   	<p>
-  		<input class="login-icon-password" type="password" name="password" placeholder="Пароль">
+  		<label class="visually-hidden" for="user-password">Пароль</label>
+  		<input id="user-password" class="login-icon-password" type="password" name="password" placeholder="Пароль">
   	</p>
-  	<p>
-  	<input type="checkbox" name="remember" class="visually-hidden">
+  	<p class="login-password-info">
+  	<label class="login-checkbox">
+  		<input type="checkbox" name="remember" class="visually-hidden">
           Запомните меня
+    </label>
     <a class="restore" href="#">Я забыл пароль!</a>
     </p>
     <button class="button" type="submit">Войти</button>
     </form>
-    <span class="modal-close">x</span>
+    <button class="modal-close" type="button">Закрыть</button>
   </section>
+  <section class="modal modal-map">
+      <h2 class="visually-hidden">Как до нас добраться</h2>
+      <p>
+      	<img src="img/map.jpg" width="766" height="560" alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург"">
+      </p>
+      <button class="modal-close" type="button">Закрыть</button>
+    </section>
   </body>
 </html>
