--- a/catalog.html
+++ b/catalog.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Барбершоп</title>
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=latin,cyrillic" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
   </head>
-  <body>
+  <body class="inner-page">
   <header class="main-header">
   		<nav class="main-navigation">
   		<a class="main-header-logo" href="index.html">
@@ -94,7 +96,7 @@
   				<span class="catalog-item-title">«Baxter of California»</span>
   				</h3>
   				<p class="catalog-item-image">
-  					<img src="img/product-1.jpg" width="220" height="165" alt="Набор для путешествий «Baxter of California»">
+  					<img src="img/catalog-1img.png" width="220" height="165" alt="Набор для путешествий «Baxter of California»">
   				</p>
   			</a>
   				<p class="catalog-item-price">
@@ -109,7 +111,7 @@
   				<span class="catalog-item-title">«Baxter of California»</span>
   				</h3>
   				<p class="catalog-item-image">
-  					<img src="img/product-2.jpg" width="220" height="165" alt="Увлажняющий кондиционер «Baxter of California»">
+  					<img src="img/catalog-2img.png" width="220" height="165" alt="Увлажняющий кондиционер «Baxter of California»">
   				</p>
   			</a>
   				<p class="catalog-item-price">
@@ -124,7 +126,7 @@
   				<span class="catalog-item-title">«Suavecito»</span>
   				</h3>
   				<p class="catalog-item-image">
-  					<img src="img/product-3.jpg" width="220" height="165" alt="Гель для волос «Suavecito»">
+  					<img src="img/catalog-3img.png" width="220" height="165" alt="Гель для волос «Suavecito»">
   				</p>
   				</a>
   				<p class="catalog-item-price">
@@ -139,7 +141,7 @@
   				<span class="catalog-item-title">«American crew»</span>
   				</h3>
   				<p class="catalog-item-image">
-  					<img src="img/product-4.jpg" width="220" height="165" alt="Глина для укладки волос «American crew»">
+  					<img src="img/catalog-4img.png" width="220" height="165" alt="Глина для укладки волос «American crew»">
   				</p>
   			</a>
   				<p class="catalog-item-price">
@@ -154,7 +156,7 @@
   				<span class="catalog-item-title">«American crew»</span>
   				</h3>
   				<p class="catalog-item-image">
-  					<img src="img/product-5.jpg" width="220" height="165" alt="Гель для волос «American crew»">
+  					<img src="img/catalog-5img.png" width="220" height="165" alt="Гель для волос «American crew»">
   				</p>
   			</a>
   				<p class="catalog-item-price">
@@ -169,7 +171,7 @@
   				<span class="catalog-item-title">«Baxter of California»</span>
   				</h3>
   				<p class="catalog-item-image">
-  					<img src="img/product-6.jpg" width="220" height="165" alt="Набор для бритья «Baxter of California»">
+  					<img src="img/catalog-6img.png" width="220" height="165" alt="Набор для бритья «Baxter of California»">
   				</p>
   			</a>
   				<p class="catalog-item-price">
