--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Барбершоп</title>
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=latin,cyrillic" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
@@ -30,19 +32,20 @@
   		<h2 class="visually-hidden">Преимущества</h2>
   		<ul class="features-list">
   			<li class="feature-item">
-  				<h2>Быстро</h2>
+  				<h3>Быстро</h3>
   			<p>Мы делаем свою работу быстро!Два часа пролетят незаметно и вы-счастливый обладатель стрижки-минутки!</p>
   			</li>
   			<li class="feature-item">
-  			<h2>Круто</h2>
+  			<h3>Круто</h3>
   			<p>Забудьте,как вы стриглись раньше. Мы сделаем из вас звезду футбола или кино!Во всяком случае внешне.</p>
   			</li>
   			<li class="feature-item">
-  	    	<h2>Дорого</h2>
+  	    	<h3>Дорого</h3>
   			<p>Наши мастера-профессионалы своего делаи не могут стоить дешево. К тому же,разве цена не дает определенный статус?</p>
   			</li>
   		</ul>
   	</section>
+  	<div class="index-columns">
   	<section class="news">
   		<h2>Новости</h2>
   		<ul class="news-list">
@@ -60,11 +63,13 @@
   	<section class="gallery">
   		<h2>Фотогалерея</h2>
   		<figure class="gallery-content">
-  	    	<a href="#"><img src="img/studio.jpg" width="286" height="164" alt="Интерьер"></a>
+  	    	<a href="#"><img src="img/galery.jpg" width="286" height="164" alt="Интерьер"></a>
+  	    </figure>
   	    	<button class="button gallery-button gallery-button-back">Назад</button>
         	<button class="button gallery-button gallery-button-next">Вперед</button>
-  		</figure>
   	</section>
+  	</div>
+  	<div class="index-columns">
   	<section>
   		<h2>Контактная информация</h2>
   		 <p>
@@ -103,6 +108,7 @@
   				<button class="button" type="submit">Отправить</button>
   		</form>
   	</section>
+  	</div>
   </main>
   <footer class="main-footer">
   	<p class="footer-contacts">
